@startuml
skinparam classAttributeIconSize 0

interface Command {
    + void execute()
}

class CommandParser {
    + Command parse(String line)
}

class Game {
    + void runCommand(Command cmd)
}

note left of Command: A teljessség igénye nélkül
Command <|.. MoveInsectCommand
Command <|.. ConsumeSporeCommand
Command <|.. ApplyEffectCommand
Command <|.. CutHyphaCommand
Command <|.. CloneInsectCommand
Command <|.. EndTurnCommand

CommandParser --> Command : returns
Game --> Command : executes
Game --> CommandParser : uses

@enduml
